# ficition_sdk

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  a.out  main.cpp
example/: main.cpp  test.cpp
include/: Queue.h  battery.h  battery.hpp  crc.hpp  def crc16(data: bytes, poly=0xA001):.py  entity.hpp  imu.hpp  odom.hpp  params.hpp  queue.h  ums_serial_methods.hpp  ums_serial_methods_win.hpp
include/log4cpp/: DailyRollingFileAppender.hh  Portability.hh
src/: Queue.cpp  battery.cpp  crc.cpp  imu.cpp  odom.cpp  params.cpp  queue.cpp  ums_serial_methods.cpp  ums_serial_methods_win.cpp
